--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
                             </div>
                             <div class="cart-icon">
                                 <i class="zmdi zmdi-case"></i>
+                                <span>2</span>
+                                <div class="cart-init">
+                                    <div class="cart-content">
+                                        <div class="cart-img">
+                                            <img src="assets/images/cart-item-01.jpg" alt="">
+                                            <span>1</span>
+                                        </div>
+                                        <div class="cart-text">
+                                            <p>Handmade Wood Chair</p>
+                                            <span>Pride : $ 2,65</span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="canvas-menu">
                                 <i class="zmdi zmdi-menu"></i>
