Pricing cart style

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
                                 </form>
                             </div>
                             <div class="cart-icon">
-                                <i class="zmdi zmdi-case"></i>
-                                <span>2</span>
+                                <div class="cart-icon-content">
+                                    <i class="zmdi zmdi-case"></i>
+                                    <span>2</span>
+                                </div>
                                 <div class="cart-init">
                                     <div class="cart-content">
                                         <div class="cart-img">
@@ -44,6 +46,27 @@
                                         <div class="cart-text">
                                             <p>Handmade Wood Chair</p>
                                             <span>Pride : $ 2,65</span>
+                                        </div>
+                                    </div>
+                                    <div class="cart-content">
+                                        <div class="cart-img">
+                                            <img src="assets/images/cart-item-02.jpg" alt="">
+                                            <span>2</span>
+                                        </div>
+                                        <div class="cart-text">
+                                            <p>Handmade Wood Chair</p>
+                                            <span>Pride : $ 4,15</span>
+                                        </div>
+                                    </div>
+                                    <div class="cart-price">
+                                        <span>Subtotal : $10,95</span>
+                                    </div>
+                                    <div class="cart-btn">
+                                        <div class="mycart ml-30 mr-15 mb-30">
+                                            <a href="#">My cart</a>
+                                        </div>
+                                        <div class="mycart">
+                                            <a href="#">Check out</a>
                                         </div>
                                     </div>
                                 </div>
