--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Archdercor HTML</title>
     <link rel="stylesheet" href="assets/css/all.min.css">
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="assets/css/default.css">
@@ -101,6 +102,41 @@
             </div>
         </div>
     </header>
+    <!-- header Area End -->
+    <!-- Slider Area Start -->
+    <div class="slider-area">
+        <div class="slider-active owl-carousel">
+            <div class="single-slider" style="background: url(assets/images/slide-01.jpg) no-repeat center / cover; height: 100vh;">
+                <div class="slider-content">
+                    <h4 class="animated bounceInDown">Professional</h4>
+                    <h3 class="animated fadeInLeft">interior design</h3>
+                    <a class="animated fadeInRight" href="#">Contact Now</a>
+                </div>
+            </div>
+            <div class="single-slider" style="background: url(assets/images/slide-02.jpg) no-repeat center / cover; height: 100vh;">
+                <div class="slider-content">
+                    <h4 class="animated flipInY delay-2s">Professional</h4>
+                    <h3 class="animated rollIn delay-2s">interior design</h3>
+                    <a class="animated jackInTheBox delay-2s" href="#">Contact Now</a>
+                </div>
+            </div>
+            <div class="single-slider" style="background: url(assets/images/slide-03.jpg) no-repeat center / cover; height: 100vh;">
+                <div class="slider-content">
+                    <h4>Professional</h4>
+                    <h3>interior design</h3>
+                    <a href="#">Contact Now</a>
+                </div>
+            </div>
+            <div class="single-slider" style="background: url(assets/images/slide-04.jpg) no-repeat center / cover; height: 100vh;">
+                <div class="slider-content">
+                    <h4>Professional</h4>
+                    <h3>interior design</h3>
+                    <a href="#">Contact Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Slider Area End -->
 
 
 
