Service Section Update and Style

--- a/index.html
+++ b/index.html
@@ -137,6 +137,48 @@
         </div>
     </div>
     <!-- Slider Area End -->
+    <!-- Service Area Start -->
+    <div class="service-area">
+        <div class="container-fluid">
+            <div class="service-wrapper">
+                <div class="service-inner" style="background: url(assets/images/service-01.jpg) center / cover">
+                    <div class="service-content ">
+                        <div class="service-item service-intro">
+                            <h4><span>we are arch </span><br> your best solution</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. Ut enim ad minim veniam, quis
+                                nostrud exercitat ullamco laboris nisi ut aliquip ex ea com consequat realzonal.</p>
+                            <a href="#" class="btn">See more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="service-inner" style="background: url(assets/images/service-02.jpg) center / cover">
+                    <div class="service-content">
+                        <div class="service-item">
+                            <img src="assets/images/icon/icon-service-01.png" alt="Icon">
+                            <h4>Agency interior</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="service-inner" style="background: url(assets/images/service-03.jpg) center / cover">
+                    <div class="service-content">
+                        <div class="service-item">
+                            <img src="assets/images/icon/icon-service-02.png" alt="Icon">
+                            <h4>Ecommerce interior</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="service-inner" style="background: url(assets/images/service-02.jpg) center / cover">
+                    <div class="service-content">
+                        <div class="service-item">
+                            <img src="assets/images/icon/icon-service-03.png" alt="Icon">
+                            <h4>residential interior</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Service Area End -->
 
 
 
