--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="service-inner" style="background: url(assets/images/service-02.jpg) center / cover">
+                <div class="service-inner f-none" style="background: url(assets/images/service-02.jpg) center / cover">
                     <div class="service-content">
                         <div class="service-item">
                             <img src="assets/images/icon/icon-service-03.png" alt="Icon">
@@ -179,6 +179,58 @@
         </div>
     </div>
     <!-- Service Area End -->
+    <!-- Our Process Area Start -->
+    <div class="our-process-area pt-100 pb-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section-title">
+                        <h4><span>Our</span> process</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit, sed do eiusmod tempor</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-3">
+                    <div class="our-process-wrapper">
+                        <div class="our-process-item item-border-b">
+                            <i class="zmdi zmdi-accounts-alt"></i>
+                            <h4>meet</h4>
+                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accuntium.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3">
+                    <div class="our-process-wrapper">
+                        <div class="our-process-item item-border-t">
+                            <i class="zmdi zmdi-library"></i>
+                            <h4>discussion</h4>
+                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accuntium.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3">
+                    <div class="our-process-wrapper">
+                        <div class="our-process-item item-border-b">
+                            <i class="zmdi zmdi-puzzle-piece"></i>
+                            <h4>ideal</h4>
+                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accuntium.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3">
+                    <div class="our-process-wrapper">
+                        <div class="our-process-item">
+                            <i class="zmdi zmdi-city-alt"></i>
+                            <h4>construct</h4>
+                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accuntium.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Our Process Area End -->
 
 
 
