--- a/index.html
+++ b/index.html
@@ -231,6 +231,147 @@
         </div>
     </div>
     <!-- Our Process Area End -->
+    <!-- Project Area Start -->
+    <section>
+        <div class="project-area pt-100">
+            <div class="section-title">
+                <h4><span>lastest</span> project</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit, sed do eiusmod tempor</p>
+            </div>
+            <div class="project-wrapper">
+                <div class="project-img">
+                    <img src="assets/images/latest-project-01.jpg" alt="">
+                </div>
+                <div class="overly"></div>
+                <div class="project-content">
+                    <div class="project-text">
+                        <h4>Au agency</h4>
+                        <p>Living room</p>
+                    </div>
+                </div>
+            </div>
+            <div class="project-wrapper">
+                <div class="project-img">
+                    <img src="assets/images/latest-project-02.jpg" alt="">
+                </div>
+                <div class="overly"></div>
+                <div class="project-content">
+                    <div class="project-text">
+                        <h4>Au agency</h4>
+                        <p>Living room</p>
+                    </div>
+                </div>
+            </div>
+            <div class="project-wrapper">
+                <div class="project-img">
+                    <img src="assets/images/latest-project-03.jpg" alt="">
+                </div>
+                <div class="overly"></div>
+                <div class="project-content">
+                    <div class="project-text">
+                        <h4>Au agency</h4>
+                        <p>Living room</p>
+                    </div>
+                </div>
+            </div>
+            <div class="project-wrapper">
+                <div class="project-img">
+                    <img src="assets/images/latest-project-04.jpg" alt="">
+                </div>
+                <div class="overly"></div>
+                <div class="project-content">
+                    <div class="project-text">
+                        <h4>Au agency</h4>
+                        <p>Living room</p>
+                    </div>
+                </div>
+            </div>
+            <div class="project-wrapper">
+                <div class="project-img">
+                    <img src="assets/images/latest-project-05.jpg" alt="">
+                </div>
+                <div class="overly"></div>
+                <div class="project-content">
+                    <div class="project-text">
+                        <h4>Au agency</h4>
+                        <p>Living room</p>
+                    </div>
+                </div>
+            </div>
+            <div class="project-wrapper">
+                <div class="project-img">
+                    <img src="assets/images/latest-project-06.jpg" alt="">
+                </div>
+                <div class="overly"></div>
+                <div class="project-content">
+                    <div class="project-text">
+                        <h4>Au agency</h4>
+                        <p>Living room</p>
+                    </div>
+                </div>
+            </div>
+            <div class="project-wrapper">
+                <div class="project-img">
+                    <img src="assets/images/latest-project-08.jpg" alt="">
+                </div>
+                <div class="overly"></div>
+                <div class="project-content">
+                    <div class="project-text">
+                        <h4>Au agency</h4>
+                        <p>Living room</p>
+                    </div>
+                </div>
+            </div>
+            <div class="project-wrapper project-inner">
+                <div class="project-img">
+                    <img src="assets/images/latest-project-08.jpg" alt="">
+                </div>
+                <div class="overly"></div>
+                <div class="project-content">
+                    <div class="project-text">
+                        <h4>Au agency</h4>
+                        <p>Living room</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Project Area End -->
+    <!-- Blog Area Start -->
+    <section class="blog-area pt-100 pb-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section-title">
+                        <h4><span>lastest</span> blog</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit, sed do eiusmod tempor</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-5">
+                    <div class="blog-wrapper">
+                        <div class="blog-img">
+                            <img src="assets/images/blog-single-01.jpg" alt="Blog Image">
+                        </div>
+                        <div class="blog-date date">
+                            <div class="blog-init">
+                                <span>24</span>
+                                <span>dec</span>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <h4>design is thinking make visual</h4>
+                            <span>by Mike Song</span>
+                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem illution accusantium doloremque laudantium, totam.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Blog Area End -->
+
 
 
 
