--- a/index.html
+++ b/index.html
@@ -367,6 +367,83 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-xl-7">
+                    <div class="row">
+                        <div class="col-xl-5">
+                            <div class="blog-item">
+                                <div class="blog-inner">
+                                    <div class="blog-right-img">
+                                        <img src="assets/images/blog-01.jpg" alt="Blog">
+                                        <div class="blog-right-date right-date">
+                                            <div class="blog-date-init">
+                                                <span>24</span>
+                                                <span>dec</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-7">
+                            <div class="blog-right-content">
+                                <h4>the detail are not the detail , they make the design</h4>
+                                <span>by Anthony Lee</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco labequat.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-5">
+                            <div class="blog-item">
+                                <div class="blog-inner">
+                                    <div class="blog-right-img">
+                                        <img src="assets/images/blog-01.jpg" alt="Blog">
+                                        <div class="blog-right-date right-date">
+                                            <div class="blog-date-init">
+                                                <span>24</span>
+                                                <span>dec</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-7">
+                            <div class="blog-right-content">
+                                <h4>the detail are not the detail , they make the design</h4>
+                                <span>by Anthony Lee</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco labequat.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-5">
+                            <div class="blog-item">
+                                <div class="blog-inner">
+                                    <div class="blog-right-img">
+                                        <img src="assets/images/blog-01.jpg" alt="Blog">
+                                        <div class="blog-right-date right-date">
+                                            <div class="blog-date-init">
+                                                <span>24</span>
+                                                <span>dec</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-7">
+                            <div class="blog-right-content">
+                                <h4>the detail are not the detail , they make the design</h4>
+                                <span>by Anthony Lee</span>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco labequat.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog-btn">
+                        <a href="#" class="btn">see more</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
