--- a/index.html
+++ b/index.html
@@ -448,6 +448,124 @@
         </div>
     </section>
     <!-- Blog Area End -->
+    <!-- Client Area Start -->
+    <section class="client-area pb-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section-title">
+                        <h4><span>what client</span> say</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit, sed do eiusmod tempor</p>
+                    </div>
+                </div>
+            </div>
+            <div class="client-wrapper">
+                <div class="active-client owl-carousel">
+                    <div class="single-client">
+                        <div class="client-img">
+                            <img src="assets/images/client-01.jpg" alt="">
+                        </div>
+                        <div class="client-content">
+                            <p><span>“</span>Sed ut perspiciatis under omnis iste natus error sit set voluptatem accusantium alti doloremque ipsa.</p>
+                            <span class="author">Glenn Walton</span>
+                            <span class="client-tag">Designer</span>
+                        </div>
+                    </div>
+                    <div class="single-client">
+                        <div class="client-img">
+                            <img src="assets/images/client-01.jpg" alt="">
+                        </div>
+                        <div class="client-content">
+                            <p><span>“</span> Sed ut perspiciatis under omnis iste natus error sit set voluptatem accusantium alti doloremque ipsa.</p>
+                            <span class="author">Glenn Walton</span>
+                            <span class="client-tag">Designer</span>
+                        </div>
+                    </div>
+                    <div class="single-client">
+                        <div class="client-img">
+                            <img src="assets/images/client-01.jpg" alt="">
+                        </div>
+                        <div class="client-content">
+                            <p><span>“</span>Sed ut perspiciatis under omnis iste natus error sit set voluptatem accusantium alti doloremque ipsa.</p>
+                            <span class="author">Glenn Walton</span>
+                            <span class="client-tag">Designer</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Client Area End -->
+    <!-- Brand Area Start -->
+    <section class="brand-area pt-55">
+        <div class="brand-area-active owl-carousel">
+            <div class="single-brand">
+                <img src="assets/images/partner-01.png" alt="">
+            </div>
+            <div class="single-brand">
+                <img src="assets/images/partner-02.png" alt="">
+            </div>
+            <div class="single-brand">
+                <img src="assets/images/partner-03.png" alt="">
+            </div>
+            <div class="single-brand">
+                <img src="assets/images/partner-04.png" alt="">
+            </div>
+            <div class="single-brand">
+                <img src="assets/images/partner-04.png" alt="">
+            </div>
+            <div class="single-brand">
+                <img src="assets/images/partner-04.png" alt="">
+            </div>
+            <div class="single-brand">
+                <img src="assets/images/partner-04.png" alt="">
+            </div>
+            <div class="single-brand">
+                <img src="assets/images/partner-04.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Brand Area End -->
+    <!-- Footer Area Start -->
+    <footer>
+        <div class="footer-top">
+            <div class="footer-widgets-one">
+                <div class="footer-logo">
+                    <img src="assets/images/logo-white.png" alt="Footer Logo">
+                </div>
+            </div>
+            <div class="footer-widgets-two">
+                <form action="#">
+                    <input type="search" placeholder="Your Email ...">
+                    <button type="submit">Send</button>
+                </form>
+            </div>
+            <div class="footer-widgets-three">
+                <div class="footer-menu">
+                    <ul>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Product</a></li>
+                        <li><a href="#">Gallery</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-widgets-four">
+                <div class="footer-social-link">
+                    <a href="#"><i class="zmdi zmdi-facebook"></i></a>
+                    <a href="#"><i class="zmdi zmdi-dribbble"></i></a>
+                    <a href="#"><i class="zmdi zmdi-google"></i></a>
+                    <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                    <a href="#"><i class="zmdi zmdi-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <p>Copyright © 2017 Designer by <a href="#">Authemes</a> . All rights reserved</p>
+        </div>
+    </footer>
+    <!-- Footer Area End -->
 
 
 
