--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                         <div class="logo-area">
                             <img src="assets/images/logo-black.png" alt="">
                         </div>
-                        
                     </div>
                     <div class="col-xl-10">
                         <div class="header-right">
@@ -146,7 +145,7 @@
     <div class="service-area">
         <div class="container-fluid">
             <div class="row no-gutters">
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 col-sm-6">
                     <div class="service-inner" style="background: url(assets/images/service-01.jpg) center / cover">
                         <div class="service-content ">
                             <div class="service-item service-intro">
@@ -159,7 +158,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 col-sm-6">
                     <div class="service-inner" style="background: url(assets/images/service-02.jpg) center / cover">
                         <div class="service-content">
                             <div class="service-item">
@@ -169,7 +168,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 col-sm-6">
                     <div class="service-inner" style="background: url(assets/images/service-03.jpg) center / cover">
                         <div class="service-content">
                             <div class="service-item">
@@ -179,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 col-sm-6">
                     <div class="service-inner f-none" style="background: url(assets/images/service-02.jpg) center / cover">
                         <div class="service-content">
                             <div class="service-item">
@@ -203,7 +202,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit, sed do eiusmod tempor</p>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 col-sm-6">
                     <div class="our-process-wrapper">
                         <div class="our-process-item item-border-b">
                             <i class="zmdi zmdi-accounts-alt"></i>
@@ -212,7 +211,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 col-sm-6">
                     <div class="our-process-wrapper">
                         <div class="our-process-item item-border-t">
                             <i class="zmdi zmdi-library"></i>
@@ -221,7 +220,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 col-sm-6">
                     <div class="our-process-wrapper">
                         <div class="our-process-item item-border-b">
                             <i class="zmdi zmdi-puzzle-piece"></i>
@@ -230,7 +229,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6">
+                <div class="col-xl-3 col-md-6 col-sm-6">
                     <div class="our-process-wrapper">
                         <div class="our-process-item">
                             <i class="zmdi zmdi-city-alt"></i>
@@ -254,7 +253,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit, sed do eiusmod tempor</p>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6">
+                    <div class="col-xl-3 col-md-6 col-sm-6">
                         <div class="project-wrapper">
                             <div class="project-img">
                                 <img src="assets/images/latest-project-01.jpg" alt="">
@@ -268,7 +267,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6">
+                    <div class="col-xl-3 col-md-6 col-sm-6">
                         <div class="project-wrapper">
                             <div class="project-img">
                                 <img src="assets/images/latest-project-02.jpg" alt="">
@@ -282,7 +281,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6">
+                    <div class="col-xl-3 col-md-6 col-sm-6">
                         <div class="project-wrapper">
                             <div class="project-img">
                                 <img src="assets/images/latest-project-03.jpg" alt="">
@@ -296,7 +295,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6">
+                    <div class="col-xl-3 col-md-6 col-sm-6">
                         <div class="project-wrapper">
                             <div class="project-img">
                                 <img src="assets/images/latest-project-04.jpg" alt="">
@@ -310,7 +309,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6">
+                    <div class="col-xl-3 col-md-6 col-sm-6">
                         <div class="project-wrapper">
                             <div class="project-img">
                                 <img src="assets/images/latest-project-05.jpg" alt="">
@@ -324,7 +323,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6">
+                    <div class="col-xl-3 col-md-6 col-sm-6">
                         <div class="project-wrapper">
                             <div class="project-img">
                                 <img src="assets/images/latest-project-06.jpg" alt="">
@@ -338,7 +337,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6">
+                    <div class="col-xl-3 col-md-6 col-sm-6">
                         <div class="project-wrapper">
                             <div class="project-img">
                                 <img src="assets/images/latest-project-08.jpg" alt="">
@@ -352,7 +351,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6">
+                    <div class="col-xl-3 col-md-6 col-sm-6">
                         <div class="project-wrapper project-inner">
                             <div class="project-img">
                                 <img src="assets/images/latest-project-08.jpg" alt="">
